Set flake8-to-ruff release to workflow_dispatch

--- a/.github/workflows/flake8-to-ruff.yaml
+++ b/.github/workflows/flake8-to-ruff.yaml
@@ -1,9 +1,6 @@
 name: "[flake8-to-ruff] Release"
 
-on:
-  create:
-    tags:
-      - v*
+on: workflow_dispatch
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
