Set maturin path when building flake8-to-ruff

--- a/.github/workflows/flake8-to-ruff.yaml
+++ b/.github/workflows/flake8-to-ruff.yaml
@@ -8,6 +8,7 @@ concurrency:
 
 env:
   PACKAGE_NAME: flake8-to-ruff
+  SUBDIRECTORY_NAME: flake8_to_ruff
   PYTHON_VERSION: "3.7" # to build abi3 wheels
 
 jobs:
@@ -29,7 +30,7 @@ jobs:
         uses: messense/maturin-action@v1
         with:
           target: x86_64
-          args: --release --out dist --sdist
+          args: --release --out dist --sdist -m ./crates/${{ env.SUBDIRECTORY_NAME }}/Cargo.toml
           maturin-version: "v0.13.0"
       - name: Install built wheel - x86_64
         run: |
@@ -56,7 +57,7 @@ jobs:
       - name: Build wheels - universal2
         uses: messense/maturin-action@v1
         with:
-          args: --release --universal2 --out dist
+          args: --release --universal2 --out dist -m ./crates/${{ env.SUBDIRECTORY_NAME }}/Cargo.toml
           maturin-version: "v0.13.0"
       - name: Install built wheel - universal2
         run: |
@@ -88,7 +89,7 @@ jobs:
         uses: messense/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          args: --release --out dist
+          args: --release --out dist -m ./crates/${{ env.SUBDIRECTORY_NAME }}/Cargo.toml
           maturin-version: "v0.13.0"
       - name: Install built wheel
         shell: bash
@@ -116,7 +117,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: auto
-          args: --release --out dist
+          args: --release --out dist -m ./crates/${{ env.SUBDIRECTORY_NAME }}/Cargo.toml
           maturin-version: "v0.13.0"
       - name: Install built wheel
         if: matrix.target == 'x86_64'
@@ -143,7 +144,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: auto
-          args: --release --out dist
+          args: --no-default-features --release --out dist -m ./crates/${{ env.SUBDIRECTORY_NAME }}/Cargo.toml
           maturin-version: "v0.13.0"
       - uses: uraimo/run-on-arch-action@v2.0.5
         if: matrix.target != 'ppc64'
@@ -182,7 +183,7 @@ jobs:
         with:
           target: ${{ matrix.target }}
           manylinux: musllinux_1_2
-          args: --release --out dist
+          args: --release --out dist -m ./crates/${{ env.SUBDIRECTORY_NAME }}/Cargo.toml
           maturin-version: "v0.13.0"
       - name: Install built wheel
         if: matrix.target == 'x86_64-unknown-linux-musl'
@@ -218,7 +219,7 @@ jobs:
         with:
           target: ${{ matrix.platform.target }}
           manylinux: musllinux_1_2
-          args: --release --out dist
+          args: --release --out dist -m ./crates/${{ env.SUBDIRECTORY_NAME }}/Cargo.toml
           maturin-version: "v0.13.0"
       - uses: uraimo/run-on-arch-action@master
         name: Install built wheel
@@ -260,7 +261,7 @@ jobs:
           maturin-version: "v0.13.0"
           target: ${{ matrix.target }}
           manylinux: auto
-          args: --release --out dist -i pypy${{ matrix.python-version }}
+          args: --release --out dist -i pypy${{ matrix.python-version }} -m ./crates/${{ env.SUBDIRECTORY_NAME }}/Cargo.toml
       - name: Install built wheel
         if: matrix.target == 'x86_64'
         run: |
