Represent per-file ignores as a map

--- a/resources/test/fixtures/pyproject.toml
+++ b/resources/test/fixtures/pyproject.toml
@@ -1,13 +1,11 @@
 [tool.ruff]
 line-length = 88
 extend-exclude = [
-    "excluded.py",
-    "migrations",
-    "directory/also_excluded.py",
+  "excluded.py",
+  "migrations",
+  "directory/also_excluded.py",
 ]
-per-file-ignores = [
-    "__init__.py:F401",
-]
+per-file-ignores = { "__init__.py" = ["F401"] }
 
 [tool.ruff.flake8-quotes]
 inline-quotes = "single"
@@ -17,22 +15,22 @@ avoid-escape = true
 
 [tool.ruff.pep8-naming]
 ignore-names = [
-    "setUp",
-    "tearDown",
-    "setUpClass",
-    "tearDownClass",
-    "setUpModule",
-    "tearDownModule",
-    "asyncSetUp",
-    "asyncTearDown",
-    "setUpTestData",
-    "failureException",
-    "longMessage",
-    "maxDiff",
+  "setUp",
+  "tearDown",
+  "setUpClass",
+  "tearDownClass",
+  "setUpModule",
+  "tearDownModule",
+  "asyncSetUp",
+  "asyncTearDown",
+  "setUpTestData",
+  "failureException",
+  "longMessage",
+  "maxDiff",
 ]
 classmethod-decorators = [
-    "classmethod",
+  "classmethod",
 ]
 staticmethod-decorators = [
-    "staticmethod",
+  "staticmethod",
 ]
