--- a/.github/workflows/flake8-to-ruff.yaml
+++ b/.github/workflows/flake8-to-ruff.yaml
@@ -284,7 +284,7 @@ jobs:
 #      - musllinux
 #      - musllinux-cross
 #      - pypy
-    if: "startsWith(github.ref, 'refs/tags/')"
+#    if: "startsWith(github.ref, 'refs/tags/')"
     steps:
       - uses: actions/download-artifact@v2
         with:
