--- a/.github/workflows/flake8-to-ruff.yaml
+++ b/.github/workflows/flake8-to-ruff.yaml
@@ -68,209 +68,209 @@ jobs:
           name: wheels
           path: dist
 
-#  windows:
-#    runs-on: windows-latest
-#    strategy:
-#      matrix:
-#        target: [x64, x86]
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: ${{ env.PYTHON_VERSION }}
-#          architecture: ${{ matrix.target }}
-#      - name: Install Rust toolchain
-#        uses: actions-rs/toolchain@v1
-#        with:
-#          toolchain: stable
-#          profile: minimal
-#          default: true
-#      - name: Build wheels
-#        uses: messense/maturin-action@v1
-#        with:
-#          target: ${{ matrix.target }}
-#          args: --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
-#          maturin-version: "v0.13.0"
-#      - name: Install built wheel
-#        shell: bash
-#        run: |
-#          python -m pip install dist/${{ env.CRATE_NAME }}-*.whl --force-reinstall
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: wheels
-#          path: dist
-#
-#  linux:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        target: [x86_64, i686]
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: ${{ env.PYTHON_VERSION }}
-#          architecture: x64
-#      - name: Build wheels
-#        uses: messense/maturin-action@v1
-#        with:
-#          target: ${{ matrix.target }}
-#          manylinux: auto
-#          args: --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
-#          maturin-version: "v0.13.0"
-#      - name: Install built wheel
-#        if: matrix.target == 'x86_64'
-#        run: |
-#          pip install dist/${{ env.CRATE_NAME }}-*.whl --force-reinstall
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: wheels
-#          path: dist
-#
-#  linux-cross:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        target: [aarch64, armv7, s390x, ppc64le, ppc64]
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: ${{ env.PYTHON_VERSION }}
-#      - name: Build wheels
-#        uses: messense/maturin-action@v1
-#        with:
-#          target: ${{ matrix.target }}
-#          manylinux: auto
-#          args: --no-default-features --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
-#          maturin-version: "v0.13.0"
-#      - uses: uraimo/run-on-arch-action@v2.0.5
-#        if: matrix.target != 'ppc64'
-#        name: Install built wheel
-#        with:
-#          arch: ${{ matrix.target }}
-#          distro: ubuntu20.04
-#          githubToken: ${{ github.token }}
-#          install: |
-#            apt-get update
-#            apt-get install -y --no-install-recommends python3 python3-pip
-#            pip3 install -U pip
-#          run: |
-#            pip3 install ${{ env.PACKAGE_NAME }} --no-index --find-links dist/ --force-reinstall
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: wheels
-#          path: dist
-#
-#  musllinux:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        target:
-#          - x86_64-unknown-linux-musl
-#          - i686-unknown-linux-musl
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: ${{ env.PYTHON_VERSION }}
-#          architecture: x64
-#      - name: Build wheels
-#        uses: messense/maturin-action@v1
-#        with:
-#          target: ${{ matrix.target }}
-#          manylinux: musllinux_1_2
-#          args: --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
-#          maturin-version: "v0.13.0"
-#      - name: Install built wheel
-#        if: matrix.target == 'x86_64-unknown-linux-musl'
-#        uses: addnab/docker-run-action@v3
-#        with:
-#          image: alpine:latest
-#          options: -v ${{ github.workspace }}:/io -w /io
-#          run: |
-#            apk add py3-pip
-#            pip3 install ${{ env.PACKAGE_NAME }} --no-index --find-links /io/dist/ --force-reinstall
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: wheels
-#          path: dist
-#
-#  musllinux-cross:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        platform:
-#          - target: aarch64-unknown-linux-musl
-#            arch: aarch64
-#          - target: armv7-unknown-linux-musleabihf
-#            arch: armv7
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: ${{ env.PYTHON_VERSION }}
-#      - name: Build wheels
-#        uses: messense/maturin-action@v1
-#        with:
-#          target: ${{ matrix.platform.target }}
-#          manylinux: musllinux_1_2
-#          args: --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
-#          maturin-version: "v0.13.0"
-#      - uses: uraimo/run-on-arch-action@master
-#        name: Install built wheel
-#        with:
-#          arch: ${{ matrix.platform.arch }}
-#          distro: alpine_latest
-#          githubToken: ${{ github.token }}
-#          install: |
-#            apk add py3-pip
-#          run: |
-#            pip3 install ${{ env.PACKAGE_NAME }} --no-index --find-links dist/ --force-reinstall
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: wheels
-#          path: dist
-#
-#  pypy:
-#    runs-on: ${{ matrix.os }}
-#    strategy:
-#      matrix:
-#        os: [ubuntu-latest, macos-latest]
-#        target: [x86_64, aarch64]
-#        python-version:
-#          - "3.7"
-#          - "3.8"
-#          - "3.9"
-#        exclude:
-#          - os: macos-latest
-#            target: aarch64
-#    steps:
-#      - uses: actions/checkout@v3
-#      - uses: actions/setup-python@v4
-#        with:
-#          python-version: pypy${{ matrix.python-version }}
-#      - name: Build wheels
-#        uses: messense/maturin-action@v1
-#        with:
-#          maturin-version: "v0.13.0"
-#          target: ${{ matrix.target }}
-#          manylinux: auto
-#          args: --release --out dist -i pypy${{ matrix.python-version }} -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
-#      - name: Install built wheel
-#        if: matrix.target == 'x86_64'
-#        run: |
-#          pip install dist/${{ env.CRATE_NAME }}-*.whl --force-reinstall
-#      - name: Upload wheels
-#        uses: actions/upload-artifact@v2
-#        with:
-#          name: wheels
-#          path: dist
+  windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        target: [x64, x86]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          architecture: ${{ matrix.target }}
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          profile: minimal
+          default: true
+      - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          args: --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
+          maturin-version: "v0.13.0"
+      - name: Install built wheel
+        shell: bash
+        run: |
+          python -m pip install dist/${{ env.CRATE_NAME }}-*.whl --force-reinstall
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
+  linux:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [x86_64, i686]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          architecture: x64
+      - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          manylinux: auto
+          args: --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
+          maturin-version: "v0.13.0"
+      - name: Install built wheel
+        if: matrix.target == 'x86_64'
+        run: |
+          pip install dist/${{ env.CRATE_NAME }}-*.whl --force-reinstall
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
+  linux-cross:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [aarch64, armv7, s390x, ppc64le, ppc64]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          manylinux: auto
+          args: --no-default-features --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
+          maturin-version: "v0.13.0"
+      - uses: uraimo/run-on-arch-action@v2.0.5
+        if: matrix.target != 'ppc64'
+        name: Install built wheel
+        with:
+          arch: ${{ matrix.target }}
+          distro: ubuntu20.04
+          githubToken: ${{ github.token }}
+          install: |
+            apt-get update
+            apt-get install -y --no-install-recommends python3 python3-pip
+            pip3 install -U pip
+          run: |
+            pip3 install ${{ env.PACKAGE_NAME }} --no-index --find-links dist/ --force-reinstall
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
+  musllinux:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target:
+          - x86_64-unknown-linux-musl
+          - i686-unknown-linux-musl
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          architecture: x64
+      - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          target: ${{ matrix.target }}
+          manylinux: musllinux_1_2
+          args: --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
+          maturin-version: "v0.13.0"
+      - name: Install built wheel
+        if: matrix.target == 'x86_64-unknown-linux-musl'
+        uses: addnab/docker-run-action@v3
+        with:
+          image: alpine:latest
+          options: -v ${{ github.workspace }}:/io -w /io
+          run: |
+            apk add py3-pip
+            pip3 install ${{ env.PACKAGE_NAME }} --no-index --find-links /io/dist/ --force-reinstall
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
+  musllinux-cross:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        platform:
+          - target: aarch64-unknown-linux-musl
+            arch: aarch64
+          - target: armv7-unknown-linux-musleabihf
+            arch: armv7
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          manylinux: musllinux_1_2
+          args: --release --out dist -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
+          maturin-version: "v0.13.0"
+      - uses: uraimo/run-on-arch-action@master
+        name: Install built wheel
+        with:
+          arch: ${{ matrix.platform.arch }}
+          distro: alpine_latest
+          githubToken: ${{ github.token }}
+          install: |
+            apk add py3-pip
+          run: |
+            pip3 install ${{ env.PACKAGE_NAME }} --no-index --find-links dist/ --force-reinstall
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
+
+  pypy:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        target: [x86_64, aarch64]
+        python-version:
+          - "3.7"
+          - "3.8"
+          - "3.9"
+        exclude:
+          - os: macos-latest
+            target: aarch64
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: pypy${{ matrix.python-version }}
+      - name: Build wheels
+        uses: messense/maturin-action@v1
+        with:
+          maturin-version: "v0.13.0"
+          target: ${{ matrix.target }}
+          manylinux: auto
+          args: --release --out dist -i pypy${{ matrix.python-version }} -m ./crates/${{ env.CRATE_NAME }}/Cargo.toml
+      - name: Install built wheel
+        if: matrix.target == 'x86_64'
+        run: |
+          pip install dist/${{ env.CRATE_NAME }}-*.whl --force-reinstall
+      - name: Upload wheels
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheels
+          path: dist
 
   release:
     name: Release
@@ -278,13 +278,12 @@ jobs:
     needs:
       - macos-universal
       - macos-x86_64
-#      - windows
-#      - linux
-#      - linux-cross
-#      - musllinux
-#      - musllinux-cross
-#      - pypy
-#    if: "startsWith(github.ref, 'refs/tags/')"
+      - windows
+      - linux
+      - linux-cross
+      - musllinux
+      - musllinux-cross
+      - pypy
     steps:
       - uses: actions/download-artifact@v2
         with:
