Set override in actions-rs/toolchain@v1

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,6 +38,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly-2022-11-01
+          override: true
           components: rustfmt
       - uses: actions/cache@v3
         env:
@@ -62,6 +63,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly-2022-11-01
+          override: true
           components: clippy
       - uses: actions/cache@v3
         env:
@@ -86,6 +88,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly-2022-11-01
+          override: true
       - uses: actions/cache@v3
         env:
           cache-name: cache-cargo
@@ -109,6 +112,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly-2022-11-01
+          override: true
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
