--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,7 @@ build-backend = "maturin"
 bindings = "bin"
 sdist-include = ["Cargo.lock"]
 strip = true
+
+[tool.isort]
+profile = "black"
+known_third_party = ["fastapi", "pydantic", "starlette"]
