Rename some fixture files

--- a/resources/test/fixtures/pyproject.toml
+++ b/resources/test/fixtures/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.ruff]
 line-length = 88
 extend-exclude = [
-  "excluded.py",
+  "excluded_file.py",
   "migrations",
-  "directory/also_excluded.py",
+  "with_excluded_file/other_excluded_file.py",
 ]
 per-file-ignores = { "__init__.py" = ["F401"] }
 
