--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -115,7 +115,9 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
+      - run: pip install black[d]==22.12.0
       - run: cargo test --all
+      - run: cargo test --package ruff --test black_compatibility_test -- --ignored
 
   maturin_build:
     name: "maturin build"
