--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ textwrap = { version = "0.16.0" }
 titlecase = { version = "2.2.1" }
 toml = { version = "0.5.9" }
 update-informer = { version = "0.5.0", default-features = false, features = ["pypi"], optional = true }
+ureq = { version = "2.5.0", features = [] }
 walkdir = { version = "2.3.2" }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
