--- a/resources/test/project/examples/docs/pyproject.toml
+++ b/resources/test/project/examples/docs/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.ruff]
 extend = "../../pyproject.toml"
 src = ["."]
-extend-select = ["I001"]
+# Enable I001, and re-enable F841, to test extension priority.
+extend-select = ["I001", "F841"]
 extend-ignore = ["F401"]
 extend-exclude = ["./docs/concepts/file.py"]
