--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,11 @@ opt-level = 3
 [profile.dev.package.similar]
 opt-level = 3
 
+# Reduce complexity of a parser function that would trigger a locals limit in a wasm tool.
+# https://github.com/bytecodealliance/wasm-tools/blob/b5c3d98e40590512a3b12470ef358d5c7b983b15/crates/wasmparser/src/limits.rs#L29
+[profile.dev.package.rustpython-parser]
+opt-level = 1
+
 [[bench]]
 name = "source_code_locator"
 harness = false
