Add autofix for W292, add to README.md, add tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ atty = { version = "0.2.14" }
 bincode = { version = "1.3.3" }
 bitflags = { version = "1.3.2" }
 cachedir = { version = "0.3.0" }
+cargo-insta = "1.23.0"
 chrono = { version = "0.4.21", default-features = false, features = ["clock"] }
 clap = { version = "4.0.1", features = ["derive"] }
 clap_complete_command = "0.4.0"
