--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ ignore = { version = "0.4.18" }
 itertools = { version = "0.10.5" }
 libcst = { git = "https://github.com/charliermarsh/LibCST", rev = "f2f0b7a487a8725d161fe8b3ed73a6758b21e177" }
 log = { version = "0.4.17" }
+natord = { version = "1.0.9" }
 nohash-hasher = { version = "0.2.0" }
 notify = { version = "5.0.0" }
 num-bigint = { version = "0.4.3" }
