--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ env:
   RUSTUP_MAX_RETRIES: 10
 
 jobs:
-  cargo_build:
+  cargo-build:
     name: "cargo build"
     runs-on: ubuntu-latest
     steps:
@@ -49,7 +49,7 @@ jobs:
       - run: git diff --quiet playground/src/ruff_options.rs || echo "::error file=playground/src/ruff_options.ts::This file is outdated. You may have to rerun 'cargo dev generate-playground-options'."
       - run: git diff --exit-code -- README.md src/checks_gen.rs playground/src/ruff_options.ts
 
-  cargo_fmt:
+  cargo-fmt:
     name: "cargo fmt"
     runs-on: ubuntu-latest
     steps:
@@ -101,7 +101,7 @@ jobs:
       - run: cargo clippy --workspace --all-targets --all-features -- -D warnings -W clippy::pedantic
       - run: cargo clippy --workspace --target wasm32-unknown-unknown --all-features -- -D warnings -W clippy::pedantic
 
-  cargo_test:
+  cargo-test:
     name: "cargo test"
     runs-on: ubuntu-latest
     steps:
@@ -126,10 +126,8 @@ jobs:
       - run: pip install black[d]==22.12.0
       - run: cargo test --all
       - run: cargo test --package ruff --test black_compatibility_test -- --ignored
-      - run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
-      - run: wasm-pack test --node
 
-  wasm_pack_test:
+  wasm-pack-test:
     name: "wasm-pack test"
     runs-on: ubuntu-latest
     steps:
@@ -154,7 +152,7 @@ jobs:
       - run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
       - run: wasm-pack test --node
 
-  maturin_build:
+  maturin-build:
     name: "maturin build"
     runs-on: ubuntu-latest
     steps:
