--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,10 @@ atty = { version = "0.2.14" }
 bincode = { version = "1.3.3" }
 bitflags = { version = "1.3.2" }
 cachedir = { version = "0.3.0" }
-cfg-if = "1.0.0"
+cfg-if = { version = "1.0.0" }
 chrono = { version = "0.4.21", default-features = false, features = ["clock"] }
 clap = { version = "4.0.1", features = ["derive"] }
-clap_complete_command = "0.4.0"
+clap_complete_command = { version = "0.4.0" }
 colored = { version = "2.0.0" }
 common-path = { version = "1.0.0" }
 dirs = { version = "4.0.0" }
@@ -43,7 +43,6 @@ num-bigint = { version = "0.4.3" }
 once_cell = { version = "1.16.0" }
 path-absolutize = { version = "3.0.14", features = ["once_cell_cache", "use_unix_paths_on_wasm"] }
 quick-junit = { version = "0.3.2" }
-rayon = { version = "1.5.3" }
 regex = { version = "1.6.0" }
 ropey = { version = "1.5.0", features = ["cr_lines", "simd"], default-features = false }
 ruff_macros = { version = "0.0.194", path = "ruff_macros" }
@@ -64,7 +63,8 @@ toml = { version = "0.5.9" }
 walkdir = { version = "2.3.2" }
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-clearscreen = { version = "1.0.10" } # uses which
+clearscreen = { version = "1.0.10" }
+rayon = { version = "1.5.3" }
 update-informer = { version = "0.5.0", default-features = false, features = ["pypi"], optional = true }
 
 # https://docs.rs/getrandom/0.2.7/getrandom/#webassembly-support
@@ -72,16 +72,16 @@ update-informer = { version = "0.5.0", default-features = false, features = ["py
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
 getrandom = { version = "0.2.7", features = ["js"] }
 console_error_panic_hook = { version = "0.1.7" }
-console_log = "0.2.0"
+console_log = { version = "0.2.0" }
 serde-wasm-bindgen = { version = "0.4" }
-js-sys = "0.3.60"
+js-sys = { version = "0.3.60" }
 wasm-bindgen = { version = "0.2.83" }
 
 [dev-dependencies]
 insta = { version = "1.19.1", features = ["yaml"] }
 test-case = { version = "2.2.2" }
 ureq = { version = "2.5.0", features = [] }
-wasm-bindgen-test = "0.3.33"
+wasm-bindgen-test = { version = "0.3.33" }
 
 [target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
 assert_cmd = { version = "2.0.4" }
