--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ env:
   RUSTUP_MAX_RETRIES: 10
 
 jobs:
-  cargo_build:
+  cargo-build:
     name: "cargo build"
     runs-on: ubuntu-latest
     steps:
@@ -45,8 +45,11 @@ jobs:
       - run: ./target/release/ruff_dev generate-json-schema
       - run: git diff --quiet ruff.schema.json || echo "::error file=ruff.schema.json::This file is outdated. You may have to rerun 'cargo dev generate-json-schema'."
       - run: git diff --exit-code -- ruff.schema.json
+      - run: ./target/release/ruff_dev generate-playground-options
+      - run: git diff --quiet playground/src/ruff_options.rs || echo "::error file=playground/src/ruff_options.ts::This file is outdated. You may have to rerun 'cargo dev generate-playground-options'."
+      - run: git diff --exit-code -- README.md src/checks_gen.rs playground/src/ruff_options.ts
 
-  cargo_fmt:
+  cargo-fmt:
     name: "cargo fmt"
     runs-on: ubuntu-latest
     steps:
@@ -82,6 +85,7 @@ jobs:
           toolchain: nightly-2022-11-01
           override: true
           components: clippy
+          target: wasm32-unknown-unknown
       - uses: actions/cache@v3
         env:
           cache-name: cache-cargo
@@ -95,8 +99,9 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - run: cargo clippy --workspace --all-targets --all-features -- -D warnings -W clippy::pedantic
+      - run: cargo clippy --workspace --target wasm32-unknown-unknown --all-features -- -D warnings -W clippy::pedantic
 
-  cargo_test:
+  cargo-test:
     name: "cargo test"
     runs-on: ubuntu-latest
     steps:
@@ -122,7 +127,32 @@ jobs:
       - run: cargo test --all
       - run: cargo test --package ruff --test black_compatibility_test -- --ignored
 
-  maturin_build:
+  wasm-pack-test:
+    name: "wasm-pack test"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly-2022-11-01
+          override: true
+      - uses: actions/cache@v3
+        env:
+          cache-name: cache-cargo
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      - run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+      - run: wasm-pack test --node
+
+  maturin-build:
     name: "maturin build"
     runs-on: ubuntu-latest
     steps:
