Re-skin playground

--- a/playground/package.json
+++ b/playground/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
+    "classnames": "^2.3.2",
     "lz-string": "^1.4.4",
     "monaco-editor": "^0.34.1",
     "react": "^18.2.0",
@@ -25,13 +26,16 @@
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.20",
     "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
