--- a/playground/.eslintrc
+++ b/playground/.eslintrc
@@ -14,7 +14,8 @@
   ],
   "rules": {
     // Disable some recommended rules that we don't want to enforce.
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-empty-function": "off"
   },
   "settings": {
     "react": {
