--- a/.github/workflows/playground.yaml
+++ b/.github/workflows/playground.yaml
@@ -41,6 +41,9 @@ jobs:
         run: npm run build
         working-directory: playground
       - name: "Deploy to Cloudflare Pages"
+        env:
+          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+        if: ${{ env.CF_API_TOKEN }} != null
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
