Support isort's force-single-line option (#1366)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,5 @@ strip = true
 [tool.ruff.isort]
 force-wrap-aliases = true
 combine-as-imports = true
+force-single-line = true
+single-line-exclusions = ["os", "logging.handlers"]
