Allow specification of explicit docstring convention

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,6 @@ force-wrap-aliases = true
 combine-as-imports = true
 force-single-line = true
 single-line-exclusions = ["os", "logging.handlers"]
+
+[tool.ruff.pydocstyle]
+convention = "google"
