--- a/resources/test/fixtures/pyproject.toml
+++ b/resources/test/fixtures/pyproject.toml
@@ -54,3 +54,12 @@ pandas = "pd"
 
 [tool.ruff.flake8-import-conventions.extend-aliases]
 "dask.dataframe" = "dd"
+
+[tool.ruff.flake8-pytest-style]
+fixture-parentheses = false
+parametrize-names-type = "csv"
+parametrize-values-type = "tuple"
+parametrize-values-row-type = "list"
+raises-require-match-for = ["Exception", "TypeError", "KeyError"]
+raises-extend-require-match-for = ["requests.RequestException"]
+mark-parentheses = false
